# ConvexOptimisationHW3

./: .gitignore  .pylintrc  README.md  environment.yml  final.ipynb  final.py  function_helper.py  main.ipynb  main_script.py  pyproject.toml  report.ipynb  test.ipynb
lock_files/: environment.yml
outputs/: final.html  final.tex  main.html  main.tex  report.tex
src/: __init__.py  custom_types.py  data_generator.py  function_helper.py  optimisation.py  types.py
