[tool.poetry]
name = "hw3"
version = "0.1.0"
description = "Homework 3 for the Convex Optimization course of MVA"
authors = ["Gabriel Watkinson"]
readme = "README.md"
repository = "https://github.com/gwatkinson/HW3"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
scipy = "^1.9.3"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
plotly = "^5.11.0"
cvxpy = "^1.2.2"
numba = "^0.56.4"
jupyter = "^1.0.0"
notebook = "^6.5.2"
nbconvert = "^7.2.4"
pyppeteer = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
